--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "setup": "npx playwright test --debug",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "auto-routes-js": "^1.1.2",
     "core-js": "^3.8.3",
     "keycloak-js": "^21.0.0",
+    "playwright": "^1.32.1",
     "scss": "^0.2.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@playwright/test": "^1.32.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
