--- a/package.json
+++ b/package.json
@@ -1,44 +1,18 @@
 {
   "name": "vue-keycloak",
-  "version": "0.1.0",
+  "version": "1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "setup": "npx playwright test --debug",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "setup": "npx playwright test --debug"
   },
   "dependencies": {
-    "auto-routes-js": "^1.1.2",
-    "core-js": "^3.8.3",
     "keycloak-js": "^21.0.0",
     "playwright": "^1.32.1",
-    "scss": "^0.2.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@playwright/test": "^1.32.1",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+    "@playwright/test": "^1.32.1"
   },
   "browserslist": [
     "> 1%",
