--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup": "npx playwright test --debug"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
     "keycloak-js": "^21.0.0",
     "playwright": "^1.32.1",
     "vue": "^3.2.13"
